pageSize as comuted prop

--- a/vue-app/src/components/template.html
+++ b/vue-app/src/components/template.html
@@ -8,7 +8,7 @@
       style="width: 35%;"
     />
     <button v-on:click="search">search</button>
-    Total:{{ totalCount }}/{{ ghRepos.length }} Page:
+    Total:{{ totalCount }}/{{ pageSize }} Page:
     <input
       type="text"
       v-model="page"
