--- a/vue-app/src/components/style/tags.css
+++ b/vue-app/src/components/style/tags.css
@@ -1,12 +1,16 @@
 #search-results label {
-    display: inline-block;
     font-family: Arial;
     font-size: 14px;
-    font-weight: bold;
     text-decoration: none;
     text-transform: uppercase;
     padding: 4px 4px;
+    margin: 4px 4px;
     border-radius: 4px;
+}
+
+.language {
+    background-color: brown;
+    color: white;
 }
 
 .famous {
